# weather-trend-forecasting

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.v1  LICENSE  Project_Description.md  README.md  docker-compose.yml  dvc.yaml  improvement_report.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-v3.txt  requirements.txt
.dvc/: config.example
.github/workflows/: ci.yml  deploy-book.yml  v3-pipeline.yml  v3-test.yml  v3-train.yml
app/: main.py
app/templates/: index.html
assessment/: PMA_presentation.pptx  README.md  requirements.txt
assessment/notebooks/: 00_data_quality.ipynb  02_forecasting_models.ipynb  03_climate_analysis.ipynb  05_feature_importance.ipynb  06_spatial_analysis.ipynb
book/: 01_project_overview.ipynb  02_eda_analysis.ipynb  03_model_evolution.ipynb  04_climate_spatial.ipynb  05_environmental_impact.ipynb  _config.yml  _toc.yml  intro.md
docs/: README.md  legacy_v1.md
models/: arima_temp_forecast.pkl  best_params.json  country_encoder.joblib  country_stats.csv  ensemble_weights.csv  feature_scaler.joblib  forecast_model.pkl  global_weather_mlp.pt  model_config.json  optuna_study.joblib  prophet_temp_forecast.pkl  xgboost_Belgium.joblib  xgboost_Bolivia.joblib  xgboost_Bulgaria.joblib  xgboost_Indonesia.joblib  xgboost_Iran.joblib  xgboost_Madagascar.joblib  xgboost_Sudan.joblib  xgboost_Thailand.joblib  xgboost_Turkey.joblib  xgboost_Vietnam.joblib  xgboost_temp_forecast.joblib  xgboost_tuned_params.csv
notebooks/: 01b_Simple_Insights.ipynb  02_Forecasting_Models.ipynb  03_Evaluation_and_Reporting.ipynb  03_advanced_forecasting.ipynb  04_Optimized_Forecasting.ipynb  04_data_quality_analysis.ipynb  05_unified_global_model.ipynb  06_monthly_averages_improvement.ipynb
presentation/: 02_EDA_Analysis.ipynb  03_Model_Evolution.ipynb  04_Climate_Spatial_Analysis.ipynb  05_Environmental_Impact.ipynb  README.md  _config.yml  _toc.yml
reports/: FINAL_REPORT.md  all_countries_results.csv  country_data_summary.csv  cv_metrics.csv  data_cleaning_recommendations.csv  executive_summary.txt  forecast_next_24h.csv  insufficient_data_countries.csv  missing_values_analysis.csv  model_comparison.csv  multi_country_results.csv  performance_summary.txt  skipped_countries.csv
src/: api.py  data_loader.py  evaluation.py  features.py  main.py  models.py  tuning.py
tests/: test_smoke.py
v2/: README.md
v2/app/: main.py
v3/: Dockerfile  docker-compose.yml  params.yaml
v4/: Dockerfile  README.md  __init__.py
(+262 files in other folders)
